--- a/views/mixins/_storeForm.pug
+++ b/views/mixins/_storeForm.pug
@@ -1,17 +1,18 @@
 mixin storeForm(store = {})
-  form.card(action='/add', method='POST')
+  form.card(action=`/add/${store._id || ''}`, method='POST')
     label(for="name") Name
-    input(type="text", name="name")
+    input(type="text", name="name", value=store.name)
 
     label(for="description") Description
-    textarea(name="description")
+    textarea(name="description")= store.description
 
     - const choices = ['Wifi', 'Open Late', 'Family Friendly', 'Veggy', 'Alco']
+    - const tags = store.tags || []
 
     ul.tags
       each choice in choices
         li.tag.tag__choice
-          input(type="checkbox", id=choice, value=choice, name="tags")
+          input(type="checkbox", id=choice, value=choice, name="tags", checked=(tags.includes(choice)))
           label(for=choice)= choice
 
     input.button(type="submit", value="Save")
