--- a/views/mixins/_storeForm.pug
+++ b/views/mixins/_storeForm.pug
@@ -1,10 +1,19 @@
 mixin storeForm(store = {})
   form.card(action=`/add/${store._id || ''}`, method='POST')
     label(for="name") Name
-    input(type="text", name="name", value=store.name)
+    input(type="text", name="name", value=store.name, required)
 
     label(for="description") Description
     textarea(name="description")= store.description
+
+    label(for="address") Address
+    input(type="text", id="address", name="location[address]", value=(store.location && store.location.address), required)
+
+    label(for="lng") Address Longitude
+    input(type="text", id="lng", name="location[coordinates][0]", value=(store.location && store.location.coordinates[0]), required)
+
+    label(for="lat") Address Latitude
+    input(type="text", id="lat", name="location[coordinates][1]", value=(store.location && store.location.coordinates[1]), required)
 
     - const choices = ['Wifi', 'Open Late', 'Family Friendly', 'Veggy', 'Alco']
     - const tags = store.tags || []
@@ -12,7 +21,7 @@ mixin storeForm(store = {})
     ul.tags
       each choice in choices
         li.tag.tag__choice
-          input(type="checkbox", id=choice, value=choice, name="tags", checked=(tags.includes(choice)))
+          input(type="checkbox", id=choice, value=choice, name="tags", checked=(tags.includes(choice)), required)
           label(for=choice)= choice
 
     input.button(type="submit", value="Save")
