--- a/views/mixins/_storeForm.pug
+++ b/views/mixins/_storeForm.pug
@@ -1,10 +1,15 @@
 mixin storeForm(store = {})
-  form.card(action=`/add/${store._id || ''}`, method='POST')
+  form.card(action=`/add/${store._id || ''}`, method='POST', enctype="multipart/form-data")
     label(for="name") Name
     input(type="text", name="name", value=store.name, required)
 
     label(for="description") Description
     textarea(name="description")= store.description
+
+    label(for="photo") Photo
+      input(type="file", name="photo", id="photo", accept="image/png, image/jpeg")
+      if store.photo
+        img(src=`/uploads/${store.photo}`, alt=store.name)
 
     label(for="address") Address
     input(type="text", id="address", name="location[address]", value=(store.location && store.location.address), required)
@@ -21,7 +26,7 @@ mixin storeForm(store = {})
     ul.tags
       each choice in choices
         li.tag.tag__choice
-          input(type="checkbox", id=choice, value=choice, name="tags", checked=(tags.includes(choice)), required)
+          input(type="checkbox", id=choice, value=choice, name="tags", checked=(tags.includes(choice)))
           label(for=choice)= choice
 
     input.button(type="submit", value="Save")
