--- a/views/topStores.pug
+++ b/views/topStores.pug
@@ -15,7 +15,7 @@ block content
           tr
             td: img(with=200 src=`/uploads/${store.photo || 'store.png'}` alt=store.name)
             td #{i+1}
-            td: a(href=`/stores/${store.slug}`)= store.name
+            td: a(href=`/store/${store.slug}`)= store.name
             td= store.reviews.length
             td #{Math.round(store.averageRating * 10) /10} / 5
 
